--- a/src/components/HeaderMobile/HeaderMobile.styles.css
+++ b/src/components/HeaderMobile/HeaderMobile.styles.css
@@ -3,7 +3,6 @@
 .header-mobile-container {
   background-color: #211728;
 }
-
 .header-mobile-header {
   display: flex;
   justify-content: center;
@@ -47,9 +46,7 @@
     width: 100vw;
     position: fixed;
     left: 0;
-    bottom: 0;
-    padding: 0;
-    margin: 0;
+    top: 0;
     height: var(--header-mobile-height);
     display: flex;
     flex-direction: row;
