--- a/src/components/TitleHeader/TitleHeader.styles.css
+++ b/src/components/TitleHeader/TitleHeader.styles.css
@@ -16,7 +16,7 @@
 
 @media screen and (min-width: 20em) {
   .titleheader-container {
-    height: var(--title-header-mobile-height);
+    height: var(--title-mobile-height);
     width: 100vw;
   }
   .titleheader-title {
