--- a/src/pages/CheatSheets/Css/Flexbox/FlexboxCheatSheet.styles.css
+++ b/src/pages/CheatSheets/Css/Flexbox/FlexboxCheatSheet.styles.css
@@ -21,7 +21,7 @@
 @media screen and (min-width: 20em) {
   .cheat-sheet-flexbox-container {
     position: absolute;
-    top: 0;
+    top: var(--header-mobile-height);
     right: 0;
     height: calc(100vh - var(--header-mobile-height));
     width: 100vw;
